Project-101-kittens-carousel-static-website-ec2/static-web/cfn-teamplate.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: alcadorreal
      SecurityGroupIds:
        -  !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: 
        Fn::Base64: 
          |
           #!/bin/bash

           
            sudo yum update -y

           
            sudo yum install -y httpd

            
            sudo yum install git -y

            sudo chmod -R 777 /var/www/html

            #make the requested folcer and clone the repository
            mkdir 101-kittens-carousel-static-website-ec2
            sudo chmod -R 777 ./101-kittens-carousel-static-website-ec2
            cd ./101-kittens-carousel-static-website-ec2/
            git clone https://github.com/SerhatG144/project-aws.git
            cd ./project-aws/
            cd ./Project-101-kittens-carousel-static-website-ec2/
            cd ./static-web


            
            cp cat0.jpg /var/www/html
            cp cat1.jpg /var/www/html
            cp cat2.jpg /var/www/html
            cp cat3.png /var/www/html
            cp index.html /var/www/html

            
            sudo systemctl start httpd
            sudo systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
